--- a/BE/airbnb/src/main/resources/application.properties
+++ b/BE/airbnb/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.initialization-mode=never
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=${MYSQL_URL}
