[#6] feat: Create AccommodationAddress entity
1. Accommodation과 1:1관계에 있는 AccommodationAddress entity 생성
2. Mysql의 point 타입에 대응하기 위한 org.locationtech.jts.geom.Point를 사용하기 위하여 org.hibernate:hibernate-spatial 의존성 추가
3. mysql의 spatial관련 sql 사용하기 위하여, application.properties에서 jpa dialect 설정

--- a/BE/airbnb/src/main/resources/application.properties
+++ b/BE/airbnb/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.initialization-mode=never
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.url=${MYSQL_URL}
+spring.jpa.database-platform=org.hibernate.spatial.dialect.mysql.MySQL5InnoDBSpatialDialect
