--- a/BE/airbnb/src/main/resources/application.properties
+++ b/BE/airbnb/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.initialization-mode=never
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.url=${MYSQL_URL}
+spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.default-property-inclusion=non_null
 spring.jpa.database-platform=org.hibernate.spatial.dialect.mysql.MySQL5InnoDBSpatialDialect
