--- a/BE/airbnb/build.gradle
+++ b/BE/airbnb/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'com.querydsl:querydsl-jpa'
     implementation 'org.hibernate:hibernate-spatial'
     compileOnly 'org.projectlombok:lombok'
