--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.5",
     "axios": "^0.21.1",
     "node-sass": "^6.0.0",
+    "qs": "^6.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
